--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "searching-ui",
+  "name": "@rx-lab/dashboard-searching-ui",
   "version": "0.0.1",
   "type": "module",
   "main": "./dist/searching-ui.js",
@@ -25,41 +25,62 @@
   },
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0"
+    "react-dom": "^18.0.0 || ^19.0.0",
+    "@ai-sdk/react": ">=1.0.0",
+    "ai": ">=4.0.0 || >=5.0.0 || >=6.0.0",
+    "react-markdown": ">=9.0.0",
+    "framer-motion": ">=10.0.0"
+  },
+  "peerDependenciesMeta": {
+    "@ai-sdk/react": {
+      "optional": true
+    },
+    "ai": {
+      "optional": true
+    }
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.0.0",
+    "cmdk": "^1.1.1",
+    "lucide-react": "^0.562.0",
     "tailwind-merge": "^3.0.0"
   },
   "devDependencies": {
+    "@ai-sdk/react": "^3.0.44",
     "@eslint/js": "^9.39.1",
     "@tailwindcss/vite": "^4.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.0",
-    "@types/node": "^24.10.1",
+    "@types/node": "^25.0.9",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react-swc": "^4.2.2",
-    "@vitest/coverage-v8": "^3.2.0",
-    "@vitest/ui": "^3.2.0",
+    "@vitest/coverage-v8": "^4.0.17",
+    "@vitest/ui": "^4.0.17",
+    "ai": "^6.0.42",
     "ajv": "^8.17.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
-    "globals": "^16.5.0",
-    "jsdom": "^26.1.0",
+    "fastify": "^5.7.1",
+    "framer-motion": "^12.0.0",
+    "globals": "^17.0.0",
+    "jsdom": "^27.4.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-markdown": "^10.1.0",
     "tailwindcss": "^4.1.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4",
     "vite-plugin-css-injected-by-js": "^3.5.2",
-    "vite-plugin-dts": "^4.5.0",
-    "vitest": "^3.2.0"
+    "vite-plugin-dts": "^4.5.4",
+    "vitest": "^4.0.17"
   }
 }
