--- a/example/package.json
+++ b/example/package.json
@@ -14,7 +14,7 @@
     "framer-motion": "^12.0.0",
     "lucide-react": "^0.562.0",
     "react-markdown": "^10.1.0",
-    "@rx-lab/dashboard-searching-ui": "file:..",
+    "@rx-lab/dashboard-searching-ui": "file:../dist",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3"
