--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
+    "format": "biome format --write .",
+    "format:check": "biome format .",
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
     "example:dev": "bun run build && cd example && bun run dev",
-    "example:build": "bun run build && cd example && bun run build"
+    "example:build": "bun run build && cd example && bun run build",
+    "prepare": "husky"
   },
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0",
@@ -55,6 +58,7 @@
   },
   "devDependencies": {
     "@ai-sdk/react": "^3.0.44",
+    "@biomejs/biome": "^2.3.11",
     "@eslint/js": "^9.39.1",
     "@tailwindcss/vite": "^4.1.0",
     "@testing-library/dom": "^10.4.0",
@@ -75,7 +79,9 @@
     "fastify": "^5.7.1",
     "framer-motion": "^12.0.0",
     "globals": "^17.0.0",
+    "husky": "^9.1.7",
     "jsdom": "^27.4.0",
+    "lint-staged": "^16.2.7",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
@@ -86,5 +92,8 @@
     "vite-plugin-css-injected-by-js": "^3.5.2",
     "vite-plugin-dts": "^4.5.4",
     "vitest": "^4.0.17"
+  },
+  "lint-staged": {
+    "*.{js,ts,jsx,tsx,json,css}": "biome format --write"
   }
 }
