--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -7,6 +7,7 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "noEmit": false,
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     }
