--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -39,4 +39,4 @@ jobs:
           registry-url: "https://registry.npmjs.org"
 
       - name: Publish to npm
-        run: npm publish --access public
+        run: npm publish --access public --provenance
